--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 
 <head>
     <title>Etch-your-sketch!</title>
-    
+
     <link rel="stylesheet" href="css/custom.css" type="text/css">
 </head>
 
 <body>
     <h1 class="heading">Draw Pad!</h1>
-    <p>Hover your mouse to draw!</p>
+    <p>Click your mouse to draw!</p>
     <div class="buttons">
         <button class="btn size">Change Size</button>
         <button class="btn erase">Erase</button>
-        <button class="btn rainbow">Rainbow</button>
-        <button class="btn black">Black</button>
+        <p id="colorPicker">Pick a color!</p>
+        <input class="btn" type="color" id="yourColor" />
     </div>
     <div class="container">
 
 
 
     </div>
-    
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
 </body>
